test/unit-tests/data-and-models/testData/sample_pickles/negativeSamples/0.pickle
version https://git-lfs.github.com/spec/v1
oid sha256:e0ecd078609ef4404937ba26b4ddc2f1c90ad5b83bf3bb0f373b981e0871f32a
size 4560251
